<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Zinnia</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_lets_go">LetsGoActivity</string>
    <string name="title_activity_dashboard_fragment">DashboardFragmentActivity</string>
    <string name="text_dialog_choice">Would you like your flowers delivered, or would you like to pick them up?</string>
    <string name="text_dialog_pickup">Pick Up</string>
    <string name="text_dialog_delivery">Delivery</string>
    <string name="text_ocassion">What\'s  the Ocassion\?</string>
    <string name="text_bday">HAPPY BIRTHDAY</string>
    <string name="text_because">JUST BECAUSE</string>
    <string name="text_getwell">GET WELL</string>
    <string name="text_sympathy">SYMPATHY</string>
    <string name="text_guest">GUEST</string>
    <string name="text_login">Sign In</string>
    <string name="text_about_zinnia">Privacy Policy</string>
    <string name="text_terms_zinnia">Terms of service</string>
    <string name="text_florist">Sell Your Flowers</string>
    <string name="text_signIn">SIGN IN</string>
    <string name="text_signup">SIGN UP</string>
    <string name="text_signIn_Vendor">VENDOR SIGN IN</string>
    <string name="hint_email">Email</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_Password">Password</string>
    <string name="text_dont_have_Ac">Don\'t have an account\? Sign Up\!</string>
    <string name="text_forget_pswd">Forgot Password\?</string>
    <string name="text_already_member">Already a member\? Sign In\!</string>
    <string name="text_or_enter">OR</string>
    <string name="text_forget_title">FORGOT PASSWORD</string>
    <string name="text_submit">SUBMIT</string>
    <string name="text_delivery">DELIVERY</string>
    <string name="text_who">WHO\?</string>
    <string name="text_name">Name</string>
    <string name="text_add1">Address 1</string>
    <string name="text_add2">Address 2</string>
    <string name="text_zip">Zip</string>
    <string name="text_when">WHEN\?</string>
    <string name="text_date">Date</string>
    <string name="text_time">Time</string>
    <string name="text_tap">Tap the button to change the time</string>
    <string name="text_next">NEXT</string>
    <string name="text_pickup">PICK UP</string>
    <string name="text_mm">MM</string>
    <string name="text_dd">DD</string>
    <string name="text_time1">8 AM - 12 PM</string>
    <string name="text_time2">1 PM - 5 PM</string>
    <string name="text_florists">FLORISTS</string>
    <string name="app_id">605636462914955</string>
    <string name="text_blissful_bounty">The Blisful Bounty</string>
    <string name="text_send_that_btn">SEND THAT</string>
    <string name="text_write_note">WRITE A NOTE</string>
    <string name="text_optional">OPTIONAL</string>
    <string name="text_note_hint">Add a perspnal note to your order</string>
    <string name="text_char">150</string>
    <string name="text_something_custom">WANT SOMETHING CUSTOM\?</string>
    <string name="text_custom_details">Provice your preferences and let the florist\'s imagination and creativity delight your recipient.</string>
    <string name="text_custom_hint">Any Flower\/Color Preferences\?</string>
    <string name="text_custom_spent">How much would you like to spend\?</string>
    <string name="text_custom_35">$35</string>
    <string name="text_custom_50">$50</string>
    <string name="text_custom_65">$65</string>
    <string name="text_custom_80">$80</string>
    <string name="text_custom_100">$100</string>
    <string name="text_custom_creation">Custom Creation</string>
    <string name="text_checkout">CHECK OUT</string>
    <string name="text_buynow">BUY NOW</string>
    <string name="text_delivery_add">DELIVERY ADDRESS</string>
    <string name="text_time_time">DELIVERY TIME</string>
    <string name="text_thanks">THANKS!</string>
    <string name="text_flowers_on_way">Your flowers are on their way</string>

</resources>