<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textPickup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fb_btn_margin_top"
        android:gravity="center"
        android:text="@string/text_pickup"
        android:textColor="@color/text_ocassion_color"
        android:textSize="@dimen/top_login_text_size" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/fb_btn_margin_left"
        android:layout_marginRight="@dimen/fb_btn_margin_right"
        android:layout_marginTop="@dimen/fb_btn_margin_top" >

        <TextView
            android:id="@+id/textWho"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            android:text="@string/text_who"
            android:textColor="@color/text_ocassion_color"
            android:textSize="@dimen/top_login_text_size" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="@dimen/line_height"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/pickup_line_margin_left"
            android:layout_toRightOf="@id/textWho"
            android:background="@color/text_ocassion_color" />
    </RelativeLayout>

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_signin_email_btn_height"
        android:layout_marginLeft="@dimen/fb_btn_margin_left"
        android:layout_marginRight="@dimen/fb_btn_margin_right"
        android:layout_marginTop="@dimen/fb_btn_margin_top"
        android:background="@color/edittext_bg_color"
        android:hint="@string/text_name"
        android:paddingLeft="@dimen/login_edittext_text_padding" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/fb_btn_margin_left"
        android:layout_marginRight="@dimen/fb_btn_margin_right"
        android:layout_marginTop="@dimen/fb_btn_margin_top" >

        <TextView
            android:id="@+id/textWhen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:gravity="center"
            android:text="@string/text_when"
            android:textColor="@color/text_ocassion_color"
            android:textSize="@dimen/top_login_text_size" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="@dimen/line_height"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/pickup_line_margin_left"
            android:layout_toRightOf="@id/textWhen"
            android:background="@color/text_ocassion_color" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/fb_btn_margin_left"
        android:layout_marginRight="@dimen/fb_btn_margin_right"
        android:layout_marginTop="@dimen/fb_btn_margin_top" >

        <TextView
            android:id="@+id/textDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/text_date"
            android:textColor="@color/text_ocassion_color"
            android:textSize="@dimen/top_login_text_size" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/fb_btn_margin_left"
            android:layout_toRightOf="@id/textDate"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvDate1"
                android:layout_width="@dimen/dd_view_size"
                android:layout_height="@dimen/dd_view_size"
                android:background="@color/text_ocassion_color"
                android:gravity="center"
                android:text="@string/text_mm"
                android:textColor="@color/text_dashboard_cat_color"
                android:textSize="@dimen/dd_text_size" />

            <TextView
                android:id="@+id/tvDate2"
                android:layout_width="@dimen/dd_view_size"
                android:layout_height="@dimen/dd_view_size"
                android:layout_marginLeft="@dimen/pickup_line_margin_left"
                android:background="@color/text_ocassion_color"
                android:gravity="center"
                android:text="@string/text_dd"
                android:textColor="@color/text_dashboard_cat_color"
                android:textSize="@dimen/dd_text_size" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/fb_btn_margin_left"
        android:layout_marginRight="@dimen/fb_btn_margin_right"
        android:layout_marginTop="@dimen/fb_btn_margin_top" >

        <TextView
            android:id="@+id/textTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/text_time"
            android:textColor="@color/text_ocassion_color"
            android:textSize="@dimen/top_login_text_size" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/fb_btn_margin_left"
            android:layout_toRightOf="@id/textTime"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/tvTime"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/dd_view_size"
                android:background="@color/text_ocassion_color"
                android:gravity="center"
                android:text="@string/text_time1"
                android:textColor="@color/text_dashboard_cat_color"
                android:textSize="@dimen/dd_text_size" />
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/fb_btn_margin_left"
        android:layout_marginRight="@dimen/fb_btn_margin_right" >

        <TextView
            android:id="@+id/temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/text_time"
            android:textColor="@color/text_ocassion_color"
            android:textSize="@dimen/top_login_text_size"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/textTap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/fb_btn_margin_left"
            android:layout_toRightOf="@id/temp"
            android:gravity="center"
            android:text="@string/text_tap"
            android:textColor="@color/text_ocassion_color"
            android:textSize="@dimen/tap_text_size" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent" >

        <Button
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/next_btn_color"
            android:text="@string/text_next"
            android:textColor="@color/text_dashboard_cat_color"
            android:textSize="@dimen/edittext_text_size" />
    </RelativeLayout>

</LinearLayout>