<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textForget"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fb_btn_margin_top"
        android:gravity="center"
        android:text="@string/text_forget_title"
        android:textColor="@color/text_ocassion_color"
        android:textSize="@dimen/top_login_text_size" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="@dimen/line_height"
        android:layout_marginLeft="@dimen/fb_btn_margin_left"
        android:layout_marginRight="@dimen/fb_btn_margin_right"
        android:layout_marginTop="@dimen/fb_btn_margin_top"
        android:background="@color/text_ocassion_color" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_signin_email_btn_height"
        android:layout_marginLeft="@dimen/fb_btn_margin_left"
        android:layout_marginRight="@dimen/fb_btn_margin_right"
        android:layout_marginTop="@dimen/fb_btn_margin_top"
        android:background="@color/edittext_bg_color"
        android:hint="@string/hint_email"
        android:paddingLeft="@dimen/login_edittext_text_padding" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/fb_btn_margin_left"
        android:layout_marginRight="@dimen/fb_btn_margin_right"
        android:layout_marginTop="@dimen/fb_btn_margin_top"
        android:background="@drawable/custom_sign_btn"
        android:text="@string/text_submit"
        android:textColor="@color/text_dashboard_cat_color"
        android:textSize="@dimen/edittext_text_size" />

</LinearLayout>