<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/fb_btn_margin_top"
        android:gravity="center"
        android:text="@string/text_signIn"
        android:textColor="@color/text_ocassion_color"
        android:textSize="@dimen/top_login_text_size" />

    <LinearLayout
        android:id="@+id/linearFacebookLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:id="@+id/buttonFB"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fb_btn_margin_left"
            android:layout_marginRight="@dimen/fb_btn_margin_right"
            android:layout_marginTop="@dimen/fb_btn_margin_top"
            android:background="@drawable/fb_button" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/fb_btn_margin_left"
        android:layout_marginRight="@dimen/fb_btn_margin_right"
        android:layout_marginTop="@dimen/fb_btn_margin_top" >

        <TextView
            android:id="@+id/tvOr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/text_or_margin"
            android:layout_marginRight="@dimen/text_or_margin"
            android:text="@string/text_or_enter"
            android:textColor="@color/or_enter_color"
            android:textSize="@dimen/or_text_size" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="@dimen/line_height"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/tvOr"
            android:background="@color/text_ocassion_color" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="@dimen/line_height"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/tvOr"
            android:background="@color/text_ocassion_color" />
    </RelativeLayout>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_signin_email_btn_height"
        android:layout_marginLeft="@dimen/fb_btn_margin_left"
        android:layout_marginRight="@dimen/fb_btn_margin_right"
        android:layout_marginTop="@dimen/fb_btn_margin_top"
        android:background="@color/edittext_bg_color"
        android:hint="@string/hint_email"
        android:paddingLeft="@dimen/login_edittext_text_padding"
        android:textSize="@dimen/edittext_text_size" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/line_signin_email_btn_height"
        android:layout_marginLeft="@dimen/fb_btn_margin_left"
        android:layout_marginRight="@dimen/fb_btn_margin_right"
        android:layout_marginTop="@dimen/fb_btn_margin_top"
        android:background="@color/edittext_bg_color"
        android:hint="@string/hint_Password"
        android:paddingLeft="@dimen/login_edittext_text_padding"
        android:textSize="@dimen/edittext_text_size" />

    <Button
        android:id="@+id/btnSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/fb_btn_margin_left"
        android:layout_marginRight="@dimen/fb_btn_margin_right"
        android:layout_marginTop="@dimen/fb_btn_margin_top"
        android:background="@drawable/custom_sign_btn"
        android:text="@string/text_signIn"
        android:textColor="@color/text_dashboard_cat_color"
        android:textSize="@dimen/edittext_text_size" />

    <LinearLayout
        android:id="@+id/linearAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/fb_btn_margin_left"
        android:layout_marginRight="@dimen/fb_btn_margin_right"
        android:layout_marginTop="@dimen/line_margin_top"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_signin_margin_top"
            android:gravity="center"
            android:text="@string/text_dont_have_Ac"
            android:textColor="@color/text_ocassion_color"
            android:textSize="@dimen/forget_text_size" />

        <TextView
            android:id="@+id/tvForget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_signin_margin_top"
            android:gravity="center"
            android:text="@string/text_forget_pswd"
            android:textColor="@color/text_ocassion_color"
            android:textSize="@dimen/forget_text_size" />
    </LinearLayout>

</LinearLayout>